alignment Fixing

--- a/index.css
+++ b/index.css
@@ -64,10 +64,9 @@ li{
 .banner-container{
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: space-around;
     height: 100vh;
     padding: 10px;
-    padding: 0 100px;
 
 }
 
@@ -92,7 +91,7 @@ li{
 .about-us-content{
     display: flex;
     justify-content: space-around;
-    padding: 0 100px;
+    padding: 20px;
     margin-top: 20px;
 }
 
@@ -104,7 +103,7 @@ li{
 #service{
     background-image: url(./images/background.png),linear-gradient(45deg,rgb(5, 5, 5), #2e2e2e);
     color: white;
-    padding: 0 100px;
+    padding: 50px;
 
 }
 
@@ -147,11 +146,10 @@ footer{
     background-color: rgb(5, 5, 5);
     color: white;
     line-height: 1rem;
-    padding: 0 100px;
 }
 
 .footer-container{
-    width: 100%;
+    width: 75%;
     margin: auto;
     padding: 50px 0;
     border-bottom: 1px solid #2e2e2e;
@@ -159,7 +157,7 @@ footer{
 
 .card-container{
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
 
 }
 
